Register the errors

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -631,6 +631,14 @@ filename = "errors/test_assign5.py"
 asr = true
 
 [[test]]
+filename = "errors/test_assign6.py"
+asr = true
+
+[[test]]
+filename = "errors/test_assign7.py"
+asr = true
+
+[[test]]
 filename = "errors/test_binop1.py"
 asr = true
 
