--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -207,8 +207,8 @@ RUN(NAME test_version        LABELS cpython llvm)
 RUN(NAME vec_01              LABELS cpython llvm)
 RUN(NAME test_str_comparison LABELS cpython llvm)
 
-# RUN(NAME generics_01         LABELS cpython llvm)
-# RUN(NAME generics_array_01   LABELS llvm)
+RUN(NAME generics_01         LABELS llvm)
+RUN(NAME generics_array_01   LABELS llvm)
 
 # Just CPython
 RUN(NAME test_builtin_bin    LABELS cpython)
