Register error for readonly attribute

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -639,6 +639,10 @@ filename = "errors/test_assign7.py"
 asr = true
 
 [[test]]
+filename = "errors/test_assign8.py"
+asr = true
+
+[[test]]
 filename = "errors/test_binop1.py"
 asr = true
 
