--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -145,8 +145,8 @@ RUN(NAME test_types_01       LABELS cpython llvm)
 RUN(NAME test_str_01         LABELS cpython llvm)
 RUN(NAME test_str_02         LABELS cpython llvm)
 RUN(NAME test_str_03         LABELS cpython llvm c)
-# RUN(NAME test_list_01        LABELS cpython llvm)
-# RUN(NAME test_list_02        LABELS cpython llvm)
+RUN(NAME test_list_01        LABELS cpython llvm)
+RUN(NAME test_list_02        LABELS cpython llvm)
 RUN(NAME test_tuple_01       LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
 RUN(NAME modules_02          LABELS cpython llvm)
@@ -154,11 +154,11 @@ RUN(NAME test_math           LABELS cpython llvm)
 RUN(NAME test_numpy_01       LABELS cpython llvm)
 RUN(NAME test_numpy_02       LABELS cpython llvm)
 RUN(NAME test_numpy_03       LABELS cpython llvm)
-# RUN(NAME test_numpy_04       LABELS llvm)
-# RUN(NAME elemental_01        LABELS cpython llvm)
-# RUN(NAME elemental_02        LABELS cpython llvm)
-# RUN(NAME elemental_03        LABELS cpython llvm)
-# RUN(NAME elemental_04        LABELS cpython llvm)
+RUN(NAME test_numpy_04       LABELS llvm)
+RUN(NAME elemental_01        LABELS cpython llvm)
+RUN(NAME elemental_02        LABELS cpython llvm)
+RUN(NAME elemental_03        LABELS cpython llvm)
+RUN(NAME elemental_04        LABELS cpython llvm)
 RUN(NAME test_random         LABELS cpython llvm)
 RUN(NAME test_os             LABELS cpython llvm)
 RUN(NAME test_builtin        LABELS cpython llvm)
