Run test_builtin_hex.py under integration_tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -172,6 +172,7 @@ RUN(NAME test_builtin_int    LABELS cpython llvm)
 RUN(NAME test_builtin_len    LABELS cpython llvm)
 RUN(NAME test_builtin_str    LABELS cpython llvm)
 RUN(NAME test_builtin_oct    LABELS cpython llvm)
+RUN(NAME test_builtin_hex    LABELS cpython llvm)
 RUN(NAME test_builtin_float  LABELS cpython llvm)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm)
 RUN(NAME test_builtin_round  LABELS cpython llvm)
