--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -173,6 +173,7 @@ RUN(NAME test_builtin_len    LABELS cpython llvm)
 RUN(NAME test_builtin_str    LABELS cpython llvm)
 RUN(NAME test_builtin_oct    LABELS cpython llvm)
 RUN(NAME test_builtin_hex    LABELS cpython llvm)
+RUN(NAME test_builtin_bin    LABELS cpython llvm)
 RUN(NAME test_builtin_float  LABELS cpython llvm)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm)
 RUN(NAME test_builtin_round  LABELS cpython llvm)
@@ -197,7 +198,6 @@ RUN(NAME test_global         LABELS cpython llvm)
 RUN(NAME test_integer_bitnot LABELS cpython llvm)
 RUN(NAME test_unary_minus    LABELS cpython llvm)
 RUN(NAME test_unary_plus     LABELS cpython llvm)
-RUN(NAME test_statistics     LABELS cpython)
 RUN(NAME test_bool_binop     LABELS cpython llvm)
 RUN(NAME test_issue_518      LABELS cpython llvm)
 RUN(NAME structs_01          LABELS cpython llvm c)
@@ -213,4 +213,4 @@ RUN(NAME vec_01              LABELS cpython llvm)
 RUN(NAME test_str_comparison LABELS cpython llvm)
 
 # Just CPython
-RUN(NAME test_builtin_bin    LABELS cpython)
+RUN(NAME test_statistics     LABELS cpython)
