--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -212,5 +212,7 @@ RUN(NAME test_version        LABELS cpython llvm)
 RUN(NAME vec_01              LABELS cpython llvm)
 RUN(NAME test_str_comparison LABELS cpython llvm)
 
+RUN(NAME generics_01         LABELS cpython llvm)
+
 # Just CPython
 RUN(NAME test_statistics     LABELS cpython)
