--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -196,6 +196,7 @@ RUN(NAME test_complex        LABELS cpython llvm)
 RUN(NAME test_max_min        LABELS cpython llvm)
 RUN(NAME test_global         LABELS cpython llvm)
 RUN(NAME test_integer_bitnot LABELS cpython llvm)
+RUN(NAME test_ifexp          LABELS cpython llvm)
 RUN(NAME test_unary_minus    LABELS cpython llvm)
 RUN(NAME test_unary_plus     LABELS cpython llvm)
 RUN(NAME test_bool_binop     LABELS cpython llvm)
