--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -524,6 +524,10 @@ ast_new = true
 filename = "parser/tuple1.py"
 ast_new = true
 
+[[test]]
+filename = "parser/type_comment1.py"
+ast_new = true
+
 # tests/errors
 
 [[test]]
