Add and update tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -216,6 +216,4 @@ RUN(NAME test_str_comparison LABELS cpython llvm)
 
 RUN(NAME generics_01         LABELS cpython llvm)
 RUN(NAME generics_array_01   LABELS llvm)
-
-# Just CPython
-RUN(NAME test_statistics     LABELS cpython)
+RUN(NAME test_statistics     LABELS cpython llvm)
