--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -151,6 +151,7 @@ RUN(NAME test_list_01        LABELS cpython llvm)
 RUN(NAME test_list_02        LABELS cpython llvm)
 RUN(NAME test_list_03        LABELS cpython llvm)
 RUN(NAME test_tuple_01       LABELS cpython llvm)
+RUN(NAME test_tuple_02       LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
 RUN(NAME modules_02          LABELS cpython llvm)
 RUN(NAME test_math           LABELS cpython llvm)
