Register pass_array_by_data.cpp in CMakeLists.txt

--- a/src/libasr/CMakeLists.txt
+++ b/src/libasr/CMakeLists.txt
@@ -48,6 +48,7 @@ set(SRC
     pass/dead_code_removal.cpp
     pass/instantiate_template.cpp
     pass/update_array_dim_intrinsic_calls.cpp
+    pass/pass_array_by_data.cpp
 
     asr_verify.cpp
     asr_utils.cpp
