Add tests and update refs.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -529,6 +529,10 @@ filename = "parser/tuple1.py"
 ast_new = true
 
 [[test]]
+filename = "parser/unicode.py"
+ast_new = true
+
+[[test]]
 filename = "parser/type_comment1.py"
 ast_new = true
 
