--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -120,7 +120,6 @@ RUN(NAME array_expr_02            LABELS cpython llvm)
 RUN(NAME bindc_01            LABELS llvm c)
 RUN(NAME bindc_02            LABELS llvm c)
 RUN(NAME bindc_04            LABELS llvm)
-RUN(NAME print_02            LABELS llvm)
 RUN(NAME exit_01             LABELS cpython llvm c)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
 RUN(NAME exit_01b            LABELS cpython llvm c)
@@ -138,6 +137,7 @@ RUN(NAME expr_04             LABELS cpython llvm c)
 RUN(NAME expr_05             LABELS cpython llvm)
 RUN(NAME expr_06             LABELS cpython llvm)
 RUN(NAME expr_07             LABELS cpython llvm)
+RUN(NAME print_02            LABELS cpython llvm)
 RUN(NAME expr_08             LABELS llvm c)
 RUN(NAME expr_09             LABELS cpython llvm)
 RUN(NAME expr_10             LABELS cpython llvm)
