--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -150,6 +150,7 @@ RUN(NAME test_str_03         LABELS cpython llvm c)
 RUN(NAME test_list_01        LABELS cpython llvm)
 RUN(NAME test_list_02        LABELS cpython llvm)
 RUN(NAME test_list_03        LABELS cpython llvm)
+RUN(NAME test_list_04        LABELS cpython llvm)
 RUN(NAME test_tuple_01       LABELS cpython llvm)
 RUN(NAME test_tuple_02       LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
