Add tests and update refs.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -532,6 +532,10 @@ ast_new = true
 filename = "parser/type_comment1.py"
 ast_new = true
 
+[[test]]
+filename = "parser/unicode.py"
+ast_new = true
+
 # tests/errors
 
 [[test]]
