--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -516,6 +516,10 @@ ast_new = true
 filename = "parser/tuple1.py"
 ast_new = true
 
+[[test]]
+filename = "errors/test_bit_length.py"
+asr = true
+
 # tests/errors
 
 [[test]]
