Added new integration tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -214,7 +214,8 @@ RUN(NAME test_str_comparison LABELS cpython llvm)
 
 RUN(NAME generics_01         LABELS cpython llvm)
 RUN(NAME generics_02  FAIL   LABELs cpython llvm)
-RUN(NAME generics_03  FAIL   LABELs cpython llvm)
+RUN(NAME generics_03  FAIL   LABELS cpython llvm)
+RUN(NAME generics_04  FAIL   LABELS cpython llvm)
 
 # Just CPython
 RUN(NAME test_statistics     LABELS cpython)
