--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -213,9 +213,9 @@ RUN(NAME vec_01              LABELS cpython llvm)
 RUN(NAME test_str_comparison LABELS cpython llvm)
 
 RUN(NAME generics_01         LABELS cpython llvm)
-RUN(NAME generics_02  FAIL   LABELs cpython llvm)
-RUN(NAME generics_03  FAIL   LABELS cpython llvm)
-RUN(NAME generics_04  FAIL   LABELS cpython llvm)
+RUN(NAME generics_02   FAIL  LABELS cpython)
+RUN(NAME generics_03         LABELS cpython)
+RUN(NAME generics_04   FAIL  LABELS cpython)
 
 # Just CPython
 RUN(NAME test_statistics     LABELS cpython)
