--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,12 +42,12 @@ jobs:
       - name: Install Windows Conda Packages
         if: contains(matrix.os, 'windows')
         shell: bash -l {0}
-        run: conda install m2-bison=3.0.4 ninja rapidjson
+        run: conda install m2-bison=3.0.4
 
       - name: Install Linux / macOS Conda Packages
         if: contains(matrix.os, 'ubuntu') || contains(matrix.os, 'macos')
         shell: bash -l {0}
-        run: conda install bison=3.4 rapidjson
+        run: conda install bison=3.4
 
       - name: Conda info
         shell: bash -l {0}
