Registered test_list_05/06/07.py

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -151,6 +151,9 @@ RUN(NAME test_list_01        LABELS cpython llvm)
 RUN(NAME test_list_02        LABELS cpython llvm)
 RUN(NAME test_list_03        LABELS cpython llvm)
 RUN(NAME test_list_04        LABELS cpython llvm)
+RUN(NAME test_list_05        LABELS cpython llvm)
+RUN(NAME test_list_06        LABELS cpython llvm)
+RUN(NAME test_list_07        LABELS cpython llvm)
 RUN(NAME test_tuple_01       LABELS cpython llvm)
 RUN(NAME test_tuple_02       LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
