Update generic list test

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -219,4 +219,5 @@ RUN(NAME test_bit_length     LABELS cpython llvm)
 
 RUN(NAME generics_01         LABELS cpython llvm)
 RUN(NAME generics_array_01   LABELS llvm)
+RUN(NAME generics_list_01    LABELS cpython)
 RUN(NAME test_statistics     LABELS cpython llvm)
