--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -378,6 +378,10 @@ filename = "../integration_tests/generics_01.py"
 asr = true
 
 [[test]]
+filename = "../integration_tests/generics_02.py"
+asr = true
+
+[[test]]
 filename = "../integration_tests/generics_array_01.py"
 asr = true
 
