--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -223,3 +223,4 @@ RUN(NAME test_bit_length     LABELS cpython llvm)
 RUN(NAME generics_01         LABELS cpython llvm)
 RUN(NAME generics_array_01   LABELS llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
+RUN(NAME test_str_attributes LABELS cpython llvm)
