--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -156,6 +156,7 @@ RUN(NAME test_list_06        LABELS cpython llvm)
 RUN(NAME test_list_07        LABELS cpython llvm)
 RUN(NAME test_tuple_01       LABELS cpython llvm)
 RUN(NAME test_tuple_02       LABELS cpython llvm)
+RUN(NAME test_dict_01       LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
 RUN(NAME modules_02          LABELS cpython llvm)
 RUN(NAME test_math           LABELS cpython llvm)
