--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -222,5 +222,6 @@ RUN(NAME test_str_comparison LABELS cpython llvm)
 RUN(NAME test_bit_length     LABELS cpython llvm)
 
 RUN(NAME generics_01         LABELS cpython llvm)
+RUN(NAME generics_02         LABELS cpython llvm)
 RUN(NAME generics_array_01   LABELS llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
