--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -385,6 +385,10 @@ asr = true
 filename = "../integration_tests/generics_array_01.py"
 asr = true
 
+[[test]]
+filename = "../integration_tests/generics_list_01.py"
+asr = true
+
 # tests/tokens
 
 [[test]]
@@ -766,8 +770,21 @@ filename = "errors/test_unsupported_type.py"
 asr = true
 
 [[test]]
+filename = "errors/generics_error_01.py"
+asr = true
+
+[[test]]
+filename = "errors/restriction_error_01.py"
+asr = true
+
+[[test]]
+filename = "errors/restriction_error_02.py"
+asr = true
+
+[[test]]
 filename = "errors/test_str_capitalize.py"
 asr = true
+
 # tests/tokens/errors
 
 [[test]]
