WASM: Optionally include whereami

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,12 @@ set(LPYTHON_BUILD_TO_WASM no
 
 if (LPYTHON_BUILD_TO_WASM)
     set(HAVE_BUILD_TO_WASM yes)
+    SET(WITH_WHEREAMI no)
     add_definitions("-DHAVE_BUILD_TO_WASM=1")
+endif()
+
+if (WITH_WHEREAMI)
+    add_definitions("-DHAVE_WHEREAMI=1")
 endif()
 
 # Find ZLIB with our custom finder before including LLVM since the finder for LLVM
