--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ set(LPYTHON_BUILD_TO_WASM no
 if (LPYTHON_BUILD_TO_WASM)
     set(HAVE_BUILD_TO_WASM yes)
     SET(WITH_WHEREAMI no)
+    SET(WITH_ZLIB no)
     add_definitions("-DHAVE_BUILD_TO_WASM=1")
 endif()
 
@@ -103,9 +104,13 @@ if (WITH_WHEREAMI)
     add_definitions("-DHAVE_WHEREAMI=1")
 endif()
 
-# Find ZLIB with our custom finder before including LLVM since the finder for LLVM
-# might search for ZLIB again and find the shared libraries instead of the static ones
-find_package(StaticZLIB REQUIRED)
+if (WITH_ZLIB)
+    add_definitions("-DHAVE_ZLIB=1")
+
+    # Find ZLIB with our custom finder before including LLVM since the finder for LLVM
+    # might search for ZLIB again and find the shared libraries instead of the static ones
+    find_package(StaticZLIB REQUIRED)
+endif()
 
 # LLVM
 set(WITH_LLVM no CACHE BOOL "Build with LLVM support")
