TEST: WASM: Enable supporting tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -145,17 +145,17 @@ RUN(NAME bindc_02            LABELS llvm c)
 RUN(NAME bindc_04            LABELS llvm)
 RUN(NAME exit_01             LABELS cpython llvm c)
 RUN(NAME exit_02     FAIL    LABELS cpython llvm c)
-RUN(NAME exit_01b            LABELS cpython llvm c)
-RUN(NAME exit_02b    FAIL    LABELS cpython llvm c)
+RUN(NAME exit_01b            LABELS cpython llvm c wasm)
+RUN(NAME exit_02b    FAIL    LABELS cpython llvm c wasm)
 RUN(NAME exit_02c    FAIL    LABELS cpython llvm c)
 
-# Test all three backends
-RUN(NAME print_01            LABELS cpython llvm c)
+# Test all four backends
+RUN(NAME print_01            LABELS cpython llvm c wasm) # wasm not yet supports sep and end keywords
 
 # CPython and LLVM
-RUN(NAME expr_01             LABELS cpython llvm c)
-RUN(NAME expr_02             LABELS cpython llvm c)
-RUN(NAME expr_03             LABELS cpython llvm c)
+RUN(NAME expr_01             LABELS cpython llvm c wasm)
+RUN(NAME expr_02             LABELS cpython llvm c wasm)
+RUN(NAME expr_03             LABELS cpython llvm c wasm)
 RUN(NAME expr_04             LABELS cpython llvm c)
 RUN(NAME expr_05             LABELS cpython llvm c)
 RUN(NAME expr_06             LABELS cpython llvm c)
@@ -163,7 +163,7 @@ RUN(NAME expr_07             LABELS cpython llvm c)
 RUN(NAME expr_08             LABELS llvm c)
 RUN(NAME expr_09             LABELS cpython llvm)
 RUN(NAME expr_10             LABELS cpython llvm)
-RUN(NAME expr_11             LABELS cpython llvm c)
+RUN(NAME expr_11             LABELS cpython llvm c wasm)
 RUN(NAME expr_12             LABELS llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
 RUN(NAME test_types_01       LABELS cpython llvm)
@@ -264,3 +264,5 @@ RUN(NAME generics_list_01    LABELS cpython llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
 RUN(NAME test_str_attributes LABELS cpython llvm)
 RUN(NAME kwargs_01           LABELS cpython llvm)
+
+RUN(NAME func_inline_01 LABELS llvm wasm)
