Reverted tests settings

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -373,9 +373,9 @@ filename = "../integration_tests/print_01.py"
 c = true
 cpp = true
 
-#[[test]]
-#filename = "../integration_tests/generics_01.py"
-#asr = true
+[[test]]
+filename = "../integration_tests/generics_01.py"
+asr = true
 
 #[[test]]
 #filename = "../integration_tests/generics_02.py"
