--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -134,7 +134,7 @@ RUN(NAME expr_01             LABELS cpython llvm c)
 RUN(NAME expr_02             LABELS cpython llvm c)
 RUN(NAME expr_03             LABELS cpython llvm c)
 RUN(NAME expr_04             LABELS cpython llvm c)
-RUN(NAME expr_05             LABELS cpython llvm)
+RUN(NAME expr_05             LABELS cpython llvm c)
 RUN(NAME expr_06             LABELS cpython llvm c)
 RUN(NAME expr_07             LABELS cpython llvm)
 RUN(NAME expr_08             LABELS llvm c)
