--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -377,17 +377,17 @@ cpp = true
 filename = "../integration_tests/generics_01.py"
 asr = true
 
-#[[test]]
-#filename = "../integration_tests/generics_02.py"
-#asr = true
+[[test]]
+filename = "../integration_tests/generics_02.py"
+asr = true
 
-#[[test]]
-#filename = "../integration_tests/generics_array_01.py"
-#asr = true
+[[test]]
+filename = "../integration_tests/generics_array_01.py"
+asr = true
 
-#[[test]]
-#filename = "../integration_tests/generics_list_01.py"
-#asr = true
+[[test]]
+filename = "../integration_tests/generics_list_01.py"
+asr = true
 
 # tests/tokens
 
