--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -174,6 +174,8 @@ RUN(NAME elemental_03        LABELS cpython llvm)
 RUN(NAME elemental_04        LABELS cpython llvm)
 RUN(NAME elemental_05        LABELS cpython llvm)
 RUN(NAME elemental_06        LABELS cpython llvm)
+RUN(NAME elemental_07        LABELS cpython llvm)
+RUN(NAME elemental_08        LABELS cpython llvm)
 RUN(NAME test_random         LABELS cpython llvm)
 RUN(NAME test_os             LABELS cpython llvm)
 RUN(NAME test_builtin        LABELS cpython llvm)
