--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -235,3 +235,4 @@ RUN(NAME generics_array_01   LABELS llvm)
 RUN(NAME generics_list_01    LABELS cpython llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
 RUN(NAME test_str_attributes LABELS cpython llvm)
+RUN(NAME kwargs_01           LABELS cpython llvm)
