Add tests and update refs.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -830,6 +830,10 @@ filename = "tokens/errors/indent2.py"
 tokens = true
 
 [[test]]
+filename = "tokens/errors/indent3.py"
+tokens = true
+
+[[test]]
 filename = "errors/kwargs_01_error.py"
 asr = true
 
