--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -177,6 +177,7 @@ RUN(NAME elemental_06        LABELS cpython llvm)
 RUN(NAME elemental_07        LABELS cpython llvm)
 RUN(NAME elemental_08        LABELS cpython llvm)
 RUN(NAME elemental_09        LABELS cpython llvm)
+RUN(NAME elemental_11        LABELS cpython llvm)
 RUN(NAME test_random         LABELS cpython llvm)
 RUN(NAME test_os             LABELS cpython llvm)
 RUN(NAME test_builtin        LABELS cpython llvm)
