--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -399,6 +399,10 @@ asr = true
 filename = "../integration_tests/generics_list_01.py"
 asr = true
 
+[[test]]
+filename = "cast.py"
+asr = true
+
 # tests/tokens
 
 [[test]]
