TEST: Add test for printing list

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -166,6 +166,7 @@ RUN(NAME expr_10             LABELS cpython llvm)
 RUN(NAME expr_11             LABELS cpython llvm c wasm)
 RUN(NAME expr_12             LABELS llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
+RUN(NAME print_02            LABELS cpython llvm)
 RUN(NAME test_types_01       LABELS cpython llvm)
 RUN(NAME test_str_01         LABELS cpython llvm)
 RUN(NAME test_str_02         LABELS cpython llvm)
