--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -384,6 +384,11 @@ c = true
 cpp = true
 
 [[test]]
+filename = "../integration_tests/print_02.py"
+asr = true
+pass = "print_list"
+
+[[test]]
 filename = "../integration_tests/generics_01.py"
 asr = true
 
