Cleaned up changes

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -144,9 +144,7 @@ llvm = true
 
 [[test]]
 filename = "dict_expr_01.py"
-ast = true
 asr = true
-llvm = true
 
 [[test]]
 filename = "../integration_tests/array_01_decl.py"
@@ -713,9 +711,10 @@ asr = true
 filename = "errors/test_dict1.py"
 asr = true
 
-[[test]]
-filename = "errors/test_dict13.py"
-asr = true
+# Enable once gh-1080 is merged
+# [[test]]
+# filename = "errors/test_dict13.py"
+# asr = true
 
 [[test]]
 filename = "errors/test_zero_division.py"
