Added support LogicalToCharacter cast in C code
Signed-off-by: Ron Nuriel <rnuriel@gsitechnology.com>

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -136,7 +136,7 @@ RUN(NAME expr_03             LABELS cpython llvm c)
 RUN(NAME expr_04             LABELS cpython llvm c)
 RUN(NAME expr_05             LABELS cpython llvm c)
 RUN(NAME expr_06             LABELS cpython llvm c)
-RUN(NAME expr_07             LABELS cpython llvm)
+RUN(NAME expr_07             LABELS cpython llvm c)
 RUN(NAME expr_08             LABELS llvm c)
 RUN(NAME expr_09             LABELS cpython llvm)
 RUN(NAME expr_10             LABELS cpython llvm)
