Add ASR test for array with size() in its signature

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -117,6 +117,7 @@ RUN(NAME array_01_decl            LABELS cpython llvm c)
 RUN(NAME array_02_decl            LABELS cpython llvm c)
 RUN(NAME array_expr_01            LABELS cpython llvm)
 RUN(NAME array_expr_02            LABELS cpython llvm)
+RUN(NAME array_expr_02            LABELS cpython)
 RUN(NAME bindc_01            LABELS llvm c)
 RUN(NAME bindc_02            LABELS llvm c)
 RUN(NAME bindc_04            LABELS llvm)
