Enable tests for test_builtin_bool.py

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -184,7 +184,7 @@ RUN(NAME test_random         LABELS cpython llvm)
 RUN(NAME test_os             LABELS cpython llvm)
 RUN(NAME test_builtin        LABELS cpython llvm)
 RUN(NAME test_builtin_abs    LABELS cpython llvm)
-RUN(NAME test_builtin_bool   LABELS cpython llvm)
+RUN(NAME test_builtin_bool   LABELS cpython llvm c)
 RUN(NAME test_builtin_pow    LABELS cpython llvm)
 RUN(NAME test_builtin_int    LABELS cpython llvm)
 RUN(NAME test_builtin_len    LABELS cpython llvm)
