Added more generics error tests

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -788,6 +788,14 @@ filename = "errors/generics_error_01.py"
 asr = true
 
 [[test]]
+filename = "errors/generics_error_02.py"
+asr = true
+
+[[test]]
+filename = "errors/generics_error_03.py"
+asr = true
+
+[[test]]
 filename = "errors/test_str_capitalize.py"
 asr = true
 
