--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -209,16 +209,16 @@ RUN(NAME test_os             LABELS cpython llvm)
 RUN(NAME test_builtin        LABELS cpython llvm)
 RUN(NAME test_builtin_abs    LABELS cpython llvm)
 RUN(NAME test_builtin_bool   LABELS cpython llvm c)
-RUN(NAME test_builtin_pow    LABELS cpython llvm)
-RUN(NAME test_builtin_int    LABELS cpython llvm)
+RUN(NAME test_builtin_pow    LABELS cpython llvm c)
+RUN(NAME test_builtin_int    LABELS cpython llvm c)
 RUN(NAME test_builtin_len    LABELS cpython llvm)
 RUN(NAME test_builtin_str    LABELS cpython llvm)
 RUN(NAME test_builtin_oct    LABELS cpython llvm)
 RUN(NAME test_builtin_hex    LABELS cpython llvm)
 RUN(NAME test_builtin_bin    LABELS cpython llvm)
-RUN(NAME test_builtin_float  LABELS cpython llvm)
+RUN(NAME test_builtin_float  LABELS cpython llvm c)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm)
-RUN(NAME test_builtin_round  LABELS cpython llvm)
+RUN(NAME test_builtin_round  LABELS cpython llvm c)
 RUN(NAME test_builtin_divmod LABELS cpython llvm)
 RUN(NAME test_math1          LABELS cpython llvm)
 RUN(NAME test_math_02        LABELS cpython llvm)
