--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -235,7 +235,7 @@ RUN(NAME bindc_03   LABELS llvm
         EXTRAFILES bindc_03b.c)
 RUN(NAME test_generics_01    LABELS cpython llvm)
 RUN(NAME test_cmath          LABELS cpython llvm)
-RUN(NAME test_complex        LABELS cpython llvm)
+RUN(NAME test_complex        LABELS cpython llvm c)
 RUN(NAME test_max_min        LABELS cpython llvm)
 RUN(NAME test_global         LABELS cpython llvm)
 RUN(NAME test_integer_bitnot LABELS cpython llvm)
