--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -252,6 +252,9 @@ RUN(NAME structs_05          LABELS llvm c)
 RUN(NAME enum_01             LABELS cpython llvm c)
 RUN(NAME enum_02             LABELS cpython llvm)
 RUN(NAME enum_03             LABELS cpython llvm c)
+RUN(NAME union_01            LABELS cpython llvm c)
+RUN(NAME union_02            LABELS llvm c)
+RUN(NAME union_03            LABELS cpython llvm c)
 RUN(NAME test_str_to_int     LABELS cpython llvm)
 RUN(NAME test_platform       LABELS cpython llvm)
 RUN(NAME test_vars_01        LABELS cpython llvm)
