--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -252,6 +252,7 @@ RUN(NAME structs_05          LABELS llvm c)
 RUN(NAME enum_01             LABELS cpython llvm c)
 RUN(NAME enum_02             LABELS cpython llvm)
 RUN(NAME enum_03             LABELS cpython llvm c)
+RUN(NAME enum_04             LABELS cpython llvm c)
 RUN(NAME union_01            LABELS cpython llvm c)
 RUN(NAME union_02            LABELS llvm c)
 RUN(NAME union_03            LABELS cpython llvm c)
