Add tests and update the refs.

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -574,6 +574,10 @@ ast_new = true
 filename = "parser/unicode.py"
 ast_new = true
 
+[[test]]
+filename = "parser/match_stmt1.py"
+ast_new = true
+
 # tests/errors
 
 [[test]]
