Registered tests for static decorator

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -276,3 +276,5 @@ RUN(NAME test_str_attributes LABELS cpython llvm)
 RUN(NAME kwargs_01           LABELS cpython llvm)
 
 RUN(NAME func_inline_01 LABELS llvm wasm)
+RUN(NAME func_static_01 LABELS cpython llvm c wasm)
+RUN(NAME func_static_02 LABELS cpython llvm c wasm)
