--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -190,7 +190,7 @@ RUN(NAME test_for_loop       LABELS cpython llvm)
 RUN(NAME modules_01          LABELS cpython llvm)
 RUN(NAME modules_02          LABELS cpython llvm)
 RUN(NAME test_math           LABELS cpython llvm)
-RUN(NAME test_numpy_01       LABELS cpython llvm)
+RUN(NAME test_numpy_01       LABELS cpython llvm c)
 RUN(NAME test_numpy_02       LABELS cpython llvm)
 RUN(NAME test_numpy_03       LABELS cpython llvm)
 RUN(NAME test_numpy_04       LABELS cpython llvm)
