--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -212,7 +212,7 @@ RUN(NAME test_builtin_bool   LABELS cpython llvm c)
 RUN(NAME test_builtin_pow    LABELS cpython llvm)
 RUN(NAME test_builtin_int    LABELS cpython llvm)
 RUN(NAME test_builtin_len    LABELS cpython llvm)
-RUN(NAME test_builtin_str    LABELS cpython llvm)
+RUN(NAME test_builtin_str    LABELS cpython llvm c)
 RUN(NAME test_builtin_oct    LABELS cpython llvm)
 RUN(NAME test_builtin_hex    LABELS cpython llvm)
 RUN(NAME test_builtin_bin    LABELS cpython llvm)
