Register test for errors

--- a/tests/tests.toml
+++ b/tests/tests.toml
@@ -849,6 +849,14 @@ asr = true
 filename = "errors/test_tuple1.py"
 asr = true
 
+[[test]]
+filename = "errors/test_for1.py"
+asr = true
+
+[[test]]
+filename = "errors/test_for2.py"
+asr = true
+
 # tests/tokens/errors
 
 [[test]]
