--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -264,8 +264,8 @@ RUN(NAME str_to_list_cast    LABELS cpython llvm)
 RUN(NAME generics_01         LABELS cpython llvm)
 RUN(NAME generics_02         LABELS cpython llvm)
 RUN(NAME generics_array_01   LABELS cpython llvm)
-RUN(NAME generics_array_02   LABELS cpython)
-RUN(NAME generics_array_04   LABELS cpython)
+RUN(NAME generics_array_02   LABELS cpython llvm)
+RUN(NAME generics_array_03   LABELS cpython llvm)
 RUN(NAME generics_list_01    LABELS cpython llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
 RUN(NAME test_str_attributes LABELS cpython llvm)
