Enabled C backend for test_numpy_04

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -193,7 +193,7 @@ RUN(NAME test_math           LABELS cpython llvm)
 RUN(NAME test_numpy_01       LABELS cpython llvm c)
 RUN(NAME test_numpy_02       LABELS cpython llvm c)
 RUN(NAME test_numpy_03       LABELS cpython llvm c)
-RUN(NAME test_numpy_04       LABELS cpython llvm)
+RUN(NAME test_numpy_04       LABELS cpython llvm c)
 RUN(NAME elemental_01        LABELS cpython llvm)
 RUN(NAME elemental_02        LABELS cpython llvm)
 RUN(NAME elemental_03        LABELS cpython llvm)
