--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -168,7 +168,7 @@ RUN(NAME expr_12             LABELS llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
 RUN(NAME print_02            LABELS cpython llvm)
 RUN(NAME test_types_01       LABELS cpython llvm)
-RUN(NAME test_str_01         LABELS cpython llvm)
+RUN(NAME test_str_01         LABELS cpython llvm c)
 RUN(NAME test_str_02         LABELS cpython llvm c)
 RUN(NAME test_str_03         LABELS cpython llvm c)
 RUN(NAME test_list_01        LABELS cpython llvm c)
