--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -235,15 +235,15 @@ RUN(NAME test_c_interop_05   LABELS llvm c
 RUN(NAME bindc_03   LABELS llvm
         EXTRAFILES bindc_03b.c)
 RUN(NAME test_generics_01    LABELS cpython llvm)
-RUN(NAME test_cmath          LABELS cpython llvm)
+RUN(NAME test_cmath          LABELS cpython llvm c)
 RUN(NAME test_complex        LABELS cpython llvm c)
-RUN(NAME test_max_min        LABELS cpython llvm)
+RUN(NAME test_max_min        LABELS cpython llvm c)
 RUN(NAME test_global         LABELS cpython llvm)
-RUN(NAME test_integer_bitnot LABELS cpython llvm)
-RUN(NAME test_ifexp          LABELS cpython llvm)
-RUN(NAME test_unary_minus    LABELS cpython llvm)
-RUN(NAME test_unary_plus     LABELS cpython llvm)
-RUN(NAME test_bool_binop     LABELS cpython llvm)
+RUN(NAME test_integer_bitnot LABELS cpython llvm c)
+RUN(NAME test_ifexp          LABELS cpython llvm c)
+RUN(NAME test_unary_minus    LABELS cpython llvm c)
+RUN(NAME test_unary_plus     LABELS cpython llvm c)
+RUN(NAME test_bool_binop     LABELS cpython llvm c)
 RUN(NAME test_issue_518      LABELS cpython llvm)
 RUN(NAME structs_01          LABELS cpython llvm c)
 RUN(NAME structs_02          LABELS llvm c)
