--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -214,9 +214,9 @@ RUN(NAME test_builtin_pow    LABELS cpython llvm)
 RUN(NAME test_builtin_int    LABELS cpython llvm)
 RUN(NAME test_builtin_len    LABELS cpython llvm)
 RUN(NAME test_builtin_str    LABELS cpython llvm c)
-RUN(NAME test_builtin_oct    LABELS cpython llvm)
-RUN(NAME test_builtin_hex    LABELS cpython llvm)
-RUN(NAME test_builtin_bin    LABELS cpython llvm)
+RUN(NAME test_builtin_oct    LABELS cpython llvm c)
+RUN(NAME test_builtin_hex    LABELS cpython llvm c)
+RUN(NAME test_builtin_bin    LABELS cpython llvm c)
 RUN(NAME test_builtin_float  LABELS cpython llvm)
 RUN(NAME test_builtin_str_02 LABELS cpython llvm)
 RUN(NAME test_builtin_round  LABELS cpython llvm)
