--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -162,14 +162,14 @@ RUN(NAME expr_06             LABELS cpython llvm c)
 RUN(NAME expr_07             LABELS cpython llvm c)
 RUN(NAME expr_08             LABELS llvm c)
 RUN(NAME expr_09             LABELS cpython llvm)
-RUN(NAME expr_10             LABELS cpython llvm)
+RUN(NAME expr_10             LABELS cpython llvm c)
 RUN(NAME expr_11             LABELS cpython llvm c wasm)
 RUN(NAME expr_12             LABELS llvm c)
 RUN(NAME loop_01             LABELS cpython llvm c)
 RUN(NAME print_02            LABELS cpython llvm)
 RUN(NAME test_types_01       LABELS cpython llvm)
 RUN(NAME test_str_01         LABELS cpython llvm)
-RUN(NAME test_str_02         LABELS cpython llvm)
+RUN(NAME test_str_02         LABELS cpython llvm c)
 RUN(NAME test_str_03         LABELS cpython llvm c)
 RUN(NAME test_list_01        LABELS cpython llvm c)
 RUN(NAME test_list_02        LABELS cpython llvm c)
@@ -186,7 +186,7 @@ RUN(NAME test_dict_02        LABELS cpython llvm)
 RUN(NAME test_dict_03        LABELS cpython llvm)
 RUN(NAME test_dict_04        LABELS cpython llvm)
 RUN(NAME test_dict_05        LABELS cpython llvm)
-RUN(NAME test_for_loop       LABELS cpython llvm)
+RUN(NAME test_for_loop       LABELS cpython llvm c)
 RUN(NAME modules_01          LABELS cpython llvm)
 RUN(NAME modules_02          LABELS cpython llvm)
 RUN(NAME test_math           LABELS cpython llvm)
@@ -207,11 +207,11 @@ RUN(NAME elemental_10        LABELS cpython llvm)
 RUN(NAME elemental_11        LABELS cpython llvm)
 RUN(NAME test_random         LABELS cpython llvm)
 RUN(NAME test_os             LABELS cpython llvm)
-RUN(NAME test_builtin        LABELS cpython llvm)
-RUN(NAME test_builtin_abs    LABELS cpython llvm)
+RUN(NAME test_builtin        LABELS cpython llvm c)
+RUN(NAME test_builtin_abs    LABELS cpython llvm c)
 RUN(NAME test_builtin_bool   LABELS cpython llvm c)
 RUN(NAME test_builtin_pow    LABELS cpython llvm)
-RUN(NAME test_builtin_int    LABELS cpython llvm)
+RUN(NAME test_builtin_int    LABELS cpython llvm c)
 RUN(NAME test_builtin_len    LABELS cpython llvm)
 RUN(NAME test_builtin_str    LABELS cpython llvm c)
 RUN(NAME test_builtin_oct    LABELS cpython llvm c)
