--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -138,6 +138,7 @@ endmacro(RUN)
 # Test zero and non-zero exit code and assert statements
 RUN(NAME array_01_decl            LABELS cpython llvm c)
 RUN(NAME array_02_decl            LABELS cpython llvm c)
+RUN(NAME array_03_decl            LABELS cpython llvm c)
 RUN(NAME array_expr_01            LABELS cpython llvm)
 RUN(NAME array_expr_02            LABELS cpython llvm)
 RUN(NAME bindc_01            LABELS llvm c)
