Added and updated tests

--- a/integration_tests/CMakeLists.txt
+++ b/integration_tests/CMakeLists.txt
@@ -280,6 +280,7 @@ RUN(NAME generics_array_01   LABELS cpython llvm)
 RUN(NAME generics_array_02   LABELS cpython llvm)
 RUN(NAME generics_array_03   LABELS cpython llvm)
 RUN(NAME generics_list_01    LABELS cpython llvm)
+RUN(NAME generics_list_02    LABELS cpython llvm)
 RUN(NAME test_statistics     LABELS cpython llvm)
 RUN(NAME test_str_attributes LABELS cpython llvm)
 RUN(NAME kwargs_01           LABELS cpython llvm)
