Sync libasr from LFortran

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ if (LPYTHON_BUILD_ALL)
   execute_process(COMMAND "build0.sh")
 endif()
 
-file(STRINGS "version" LCOMPILERS_VERSION)
+file(STRINGS "version" LFORTRAN_VERSION)
 
 project(lpython LANGUAGES C CXX)
 
@@ -45,10 +45,10 @@ include(GNUInstallDirs)
 include(InstallRequiredSystemLibraries)
 set(CPACK_GENERATOR "TBZ2")
 set(CPACK_STRIP_FILES YES)
-set(CPACK_PACKAGE_FILE_NAME lpython-${LCOMPILERS_VERSION}-${CMAKE_SYSTEM_NAME})
+set(CPACK_PACKAGE_FILE_NAME lpython-${LFORTRAN_VERSION}-${CMAKE_SYSTEM_NAME})
 include(CPack)
 # So that CPACK_PACKAGE_FILE_NAME prints the correct value below
-set(CPACK_PACKAGE_FILE_NAME lpython-${LCOMPILERS_VERSION}-${CMAKE_SYSTEM_NAME})
+set(CPACK_PACKAGE_FILE_NAME lpython-${LFORTRAN_VERSION}-${CMAKE_SYSTEM_NAME})
 
 
 if (NOT CMAKE_CXX_STANDARD)
@@ -272,7 +272,7 @@ if (WITH_RUNTIME_STACKTRACE)
 endif()
 if (WITH_BFD)
     find_package(BFD REQUIRED)
-    set(HAVE_LCOMPLIERS_BFD yes)
+    set(HAVE_LCOMPILERS_BFD yes)
 endif()
 if (WITH_DWARFDUMP)
     set(HAVE_LCOMPILERS_DWARFDUMP yes)
@@ -294,7 +294,7 @@ enable_testing()
 message("\n")
 message("Configuration results")
 message("---------------------")
-message("LPYTHON_VERSION: ${LCOMPILERS_VERSION}")
+message("LPYTHON_VERSION: ${LFORTRAN_VERSION}")
 message("CPACK_PACKAGE_FILE_NAME: ${CPACK_PACKAGE_FILE_NAME}")
 message("C compiler      : ${CMAKE_C_COMPILER}")
 message("C++ compiler    : ${CMAKE_CXX_COMPILER}")
